# webMonitor

./: .gitignore  README.md  ai.py  app.py  build.py  database.py  email_sender.py  hello.py  main.py  monitor.py  notify-change.spec  pyproject.toml  test_ai.py
static/: style.css
static/js/: ai.js  email.js  main.js  tasks.js
templates/: index.html
