[project]
name = "notify-change"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "openai>=1.96.1",
    "requests>=2.32.4",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
